Fixed the bug causing the side to overflow

--- a/src/Containers/AboutCard.css
+++ b/src/Containers/AboutCard.css
@@ -1,4 +1,9 @@
 /* Header withe About Author */
+
+.main 
+{
+    max-width: 60rem;
+}
 .about-header
 {
     display: flex;
@@ -23,8 +28,8 @@
 }
 .img-square-holder
 {
-    width: 60rem;
-    height: 200px;
+    width: 6rem;
+    height: 6rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
      rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
@@ -41,7 +46,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 9rem;
+    font-size: 4rem;
+    padding: 0.5rem;
     text-align: center;
     width: 100%;
     height: 100%;
